media query bug fix

--- a/public/index.html
+++ b/public/index.html
@@ -18,56 +18,56 @@
 
         <div class="options-container">
             <div class="options hide">
-                <label for="grayscale">
+                <label class="option" for="grayscale">
                     <input id="grayscale" name="option" type="radio" checked="true">
                     <span>Grayscale</span>
                 </label>
-                <label for="resize">
+                <label class="option" for="resize">
                     <input id="resize" name="option" type="radio">
                     <span>Resize (Maintain Aspect Ratio)</span>
                 </label>
-                <label for="exact-resize">
+                <label class="option" for="exact-resize">
                     <input id="exact-resize" name="option" type="radio">
                     <span>Exact Resize</span>
                 </label>
-                <label for="contrast">
+                <label class="option" for="contrast">
                     <input id="contrast" name="option" type="radio">
                     <span>Adjust Contrast</span>
                 </label>
-                <label for="brightness">
+                <label class="option" for="brightness">
                     <input id="brightness" name="option" type="radio">
                     <span>Adjust Brightness</span>
                 </label>
-                <label for="rotate">
+                <label class="option" for="rotate">
                     <input id="rotate" name="option" type="radio">
                     <span>Rotate</span>
                 </label>
 
-                <div id="height-field" class="input-field hide">
+                <div id="height-field" class="input-field hide option">
                     <input id="height" type="number">
                     <label for="height">height</label>
                 </div>
-                <div id="width-field" class="input-field hide">
+                <div id="width-field" class="input-field hide option">
                     <input id="width" type="number">
                     <label for="width">width</label>
                 </div>
-                <div id="amount-field" class="input-field hide">
+                <div id="amount-field" class="input-field hide option">
                     <input id="amount" type="number">
                     <label for="amount">E.g. -50 or 50</label>
                 </div>
                 
                 <div id="rotate-selection" class="hide">
-                    <label for="ninety">
+                    <label class="option" for="ninety">
                         <input id="ninety" name="degrees" type="radio">
                         <span>90 Degrees</span>
                     </label>
 
-                    <label for="one-eighty">
+                    <label class="option" for="one-eighty">
                         <input id="one-eighty" name="degrees" type="radio">
                         <span>180 Degrees</span>
                     </label>
 
-                    <label for="two-seventy">
+                    <label class="option" for="two-seventy">
                         <input id="two-seventy" name="degrees" type="radio">
                         <span>270 Degrees</span>
                     </label>
