--- a/public/index.html
+++ b/public/index.html
@@ -1,93 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
     <title>Quick Edits</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="content white z-depth-3">
-        <h2>Quick Edits</h2>
-        <div class="divider"></div>
-        <p>Need to do some basic image manipulation? Just upload your image and select an option. Reload the page to start with a new image.</p>
+      <h2>Quick Edits</h2>
+      <div class="divider"></div>
+      <p>
+        Need to do some basic image manipulation? Just upload your image and
+        select an option. Reload the page to start with a new image.
+      </p>
 
-        <div class="options-container">
-            <div class="options hide">
-                <label class="option" for="grayscale">
-                    <input id="grayscale" name="option" type="radio" checked="true">
-                    <span>Grayscale</span>
-                </label>
-                <label class="option" for="resize">
-                    <input id="resize" name="option" type="radio">
-                    <span>Resize (Maintain Aspect Ratio)</span>
-                </label>
-                <label class="option" for="exact-resize">
-                    <input id="exact-resize" name="option" type="radio">
-                    <span>Exact Resize</span>
-                </label>
-                <label class="option" for="contrast">
-                    <input id="contrast" name="option" type="radio">
-                    <span>Adjust Contrast</span>
-                </label>
-                <label class="option" for="brightness">
-                    <input id="brightness" name="option" type="radio">
-                    <span>Adjust Brightness</span>
-                </label>
-                <label class="option" for="rotate">
-                    <input id="rotate" name="option" type="radio">
-                    <span>Rotate</span>
-                </label>
+      <div class="options-container">
+        <div class="options hide">
+          <label class="option" for="grayscale">
+            <input id="grayscale" name="option" type="radio" checked="true" />
+            <span>Grayscale</span>
+          </label>
+          <label class="option" for="resize">
+            <input id="resize" name="option" type="radio" />
+            <span>Resize (Maintain Aspect Ratio)</span>
+          </label>
+          <label class="option" for="exact-resize">
+            <input id="exact-resize" name="option" type="radio" />
+            <span>Exact Resize</span>
+          </label>
+          <label class="option" for="contrast">
+            <input id="contrast" name="option" type="radio" />
+            <span>Adjust Contrast</span>
+          </label>
+          <label class="option" for="brightness">
+            <input id="brightness" name="option" type="radio" />
+            <span>Adjust Brightness</span>
+          </label>
+          <label class="option" for="rotate">
+            <input id="rotate" name="option" type="radio" />
+            <span>Rotate</span>
+          </label>
 
-                <div id="height-field" class="input-field hide option">
-                    <input id="height" type="number">
-                    <label for="height">height</label>
-                </div>
-                <div id="width-field" class="input-field hide option">
-                    <input id="width" type="number">
-                    <label for="width">width</label>
-                </div>
-                <div id="amount-field" class="input-field hide option">
-                    <input id="amount" type="number">
-                    <label for="amount">E.g. -50 or 50</label>
-                </div>
-                
-                <div id="rotate-selection" class="hide">
-                    <label class="option" for="ninety">
-                        <input id="ninety" name="degrees" type="radio">
-                        <span>90 Degrees</span>
-                    </label>
+          <div id="height-field" class="input-field hide option">
+            <input id="height" type="number" />
+            <label for="height">height</label>
+          </div>
+          <div id="width-field" class="input-field hide option">
+            <input id="width" type="number" />
+            <label for="width">width</label>
+          </div>
+          <div id="amount-field" class="input-field hide option">
+            <input id="amount" type="number" />
+            <label for="amount">E.g. -50 or 50</label>
+          </div>
 
-                    <label class="option" for="one-eighty">
-                        <input id="one-eighty" name="degrees" type="radio">
-                        <span>180 Degrees</span>
-                    </label>
+          <div id="rotate-selection" class="hide">
+            <label class="option" for="ninety">
+              <input id="ninety" name="degrees" type="radio" />
+              <span>90 Degrees</span>
+            </label>
 
-                    <label class="option" for="two-seventy">
-                        <input id="two-seventy" name="degrees" type="radio">
-                        <span>270 Degrees</span>
-                    </label>
-                </div>
-            </div>
+            <label class="option" for="one-eighty">
+              <input id="one-eighty" name="degrees" type="radio" />
+              <span>180 Degrees</span>
+            </label>
+
+            <label class="option" for="two-seventy">
+              <input id="two-seventy" name="degrees" type="radio" />
+              <span>270 Degrees</span>
+            </label>
+          </div>
         </div>
+      </div>
 
-        <label id="upload-btn" for="upload">
-            <input id="upload" class="hide" type="file" accept="image/png, image/jpeg">
-            <a class="btn-large waves-effect waves-light red tooltipped"><i class="material-icons left">insert_photo</i>Upload Image</a>
-        </label>
+      <label id="upload-btn" for="upload">
+        <input
+          id="upload"
+          class="hide"
+          type="file"
+          accept="image/png, image/jpeg"
+        />
+        <a class="btn-large waves-effect waves-light red tooltipped"
+          ><i class="material-icons left">insert_photo</i>Upload Image</a
+        >
+      </label>
 
-        <label id="submit-btn" for="submit" class="hide">
-            <input id="submit" class="hide" type="submit">
-            <a class="btn-large waves-effect waves-light red tooltipped"><i class="material-icons left">edit</i>Apply Edit</a>
-        </label>
+      <label id="submit-btn" for="submit" class="hide">
+        <input id="submit" class="hide" type="submit" />
+        <a class="btn-large waves-effect waves-light red tooltipped"
+          ><i class="material-icons left">edit</i>Apply Edit</a
+        >
+      </label>
 
-        <img id="img">
+      <img id="img" />
     </div>
-    
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-</body>
+  </body>
 </html>
