--- a/src/index.html
+++ b/src/index.html
@@ -119,6 +119,7 @@
       </label>
 
       <img id="img" />
+      <canvas id="canvas" class="hide"></canvas>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
