keep crop fields hidden on select

--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
             <input id="brightness" name="option" type="radio" />
             <span>Adjust Brightness</span>
           </label>
-          <label class="crop" for="crop">
+          <label class="option" for="crop">
             <input id="crop" name="option" type="radio" />
             <span>Crop</span>
           </label>
