--- a/src/index.html
+++ b/src/index.html
@@ -20,8 +20,7 @@
       <h2>Quick Edits</h2>
       <div class="divider"></div>
       <p>
-        Need to do some basic image manipulation? Just upload your image and
-        select an option. Reload the page to start with a new image.
+        Need to do some basic image manipulation? Just upload your image to get started. Reload the page to start with a new image.
       </p>
 
       <div class="options-container">
